tests/ui/repr/repr-transparent-array.stderr
error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:28:22
   |
LL | pub struct T5(Sized, SusArray);
   |                      ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>
note: the lint level is defined here
  --> $DIR/repr-transparent-array.rs:1:9
   |
LL | #![deny(repr_transparent_non_zst_fields)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:33:15
   |
LL | pub struct T6(SusArray, Sized);
   |               ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>

error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:38:19
   |
LL | pub struct T7(T1, SusArray); // still wrong, even when the array is hidden inside another type
   |                   ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>

error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:43:25
   |
LL | pub struct T8(SusArray, SusArray); // still wrong
   |                         ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>

error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:48:29
   |
LL | pub struct T9([[u8; 0]; 0], SusArray); // still wrong
   |                             ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>

error: zero-sized fields in `repr(transparent)` cannot contain `repr(C)` types
  --> $DIR/repr-transparent-array.rs:53:23
   |
LL | pub struct T10(Sized, CPacked1Arr<u128>);
   |                       ^^^^^^^^^^^^^^^^^
   |
   = note: this field contains `CPacked1Arr<u128>`, which is a `#[repr(C)]` type, so it is not guaranteed to be zero-sized on all targets.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>

error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:58:23
   |
LL | pub struct T11(Sized, RustPacked2Arr);
   |                       ^^^^^^^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>

error: aborting due to 7 previous errors

Future incompatibility report: Future breakage diagnostic:
error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:28:22
   |
LL | pub struct T5(Sized, SusArray);
   |                      ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>
note: the lint level is defined here
  --> $DIR/repr-transparent-array.rs:1:9
   |
LL | #![deny(repr_transparent_non_zst_fields)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:33:15
   |
LL | pub struct T6(SusArray, Sized);
   |               ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>
note: the lint level is defined here
  --> $DIR/repr-transparent-array.rs:1:9
   |
LL | #![deny(repr_transparent_non_zst_fields)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:38:19
   |
LL | pub struct T7(T1, SusArray); // still wrong, even when the array is hidden inside another type
   |                   ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>
note: the lint level is defined here
  --> $DIR/repr-transparent-array.rs:1:9
   |
LL | #![deny(repr_transparent_non_zst_fields)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:43:25
   |
LL | pub struct T8(SusArray, SusArray); // still wrong
   |                         ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>
note: the lint level is defined here
  --> $DIR/repr-transparent-array.rs:1:9
   |
LL | #![deny(repr_transparent_non_zst_fields)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:48:29
   |
LL | pub struct T9([[u8; 0]; 0], SusArray); // still wrong
   |                             ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>
note: the lint level is defined here
  --> $DIR/repr-transparent-array.rs:1:9
   |
LL | #![deny(repr_transparent_non_zst_fields)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: zero-sized fields in `repr(transparent)` cannot contain `repr(C)` types
  --> $DIR/repr-transparent-array.rs:53:23
   |
LL | pub struct T10(Sized, CPacked1Arr<u128>);
   |                       ^^^^^^^^^^^^^^^^^
   |
   = note: this field contains `CPacked1Arr<u128>`, which is a `#[repr(C)]` type, so it is not guaranteed to be zero-sized on all targets.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>
note: the lint level is defined here
  --> $DIR/repr-transparent-array.rs:1:9
   |
LL | #![deny(repr_transparent_non_zst_fields)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:58:23
   |
LL | pub struct T11(Sized, RustPacked2Arr);
   |                       ^^^^^^^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>
note: the lint level is defined here
  --> $DIR/repr-transparent-array.rs:1:9
   |
LL | #![deny(repr_transparent_non_zst_fields)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

